--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,7 +24,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 22.0
+font_size 18.0
 
 #: Font size (in pts)
 
@@ -628,9 +628,9 @@ font_size 22.0
 
 #: }}}
 
-#: Terminal bell {{{
+i#: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
